# ics7-OOP

./: .gitignore  README.md
lab_03/: CMakeLists.txt  main.cpp  uml.drawio  ~$uml.drawio.bkp
lab_03/docs/: lab_03.drawio
lab_03/gui/qt/: design.h  display.h  mainwindow.cpp  mainwindow.h
lab_03/gui/qt/drawer/: qt_drawer.cpp  qt_drawer.hpp
lab_03/gui/qt/drawer/factory/: qt_drawer_factory.cpp  qt_drawer_factory.hpp
lab_03/gui/qt/ui/: design.ui
lab_03/implementation/commands/: command.hpp
lab_03/implementation/commands/camera/: camera_command.hpp
lab_03/implementation/commands/camera/add/: add_camera.cpp  add_camera.hpp
lab_03/implementation/commands/camera/count/: count_cameras.cpp  count_cameras.hpp
lab_03/implementation/commands/camera/load/: load_camera.cpp  load_camera.hpp
lab_03/implementation/commands/camera/move/: move_camera.cpp  move_camera.hpp
lab_03/implementation/commands/camera/remove/: remove_camera.cpp  remove_camera.hpp
lab_03/implementation/commands/camera/set/: set_camera.cpp  set_camera.hpp
lab_03/implementation/commands/model/: model_command.hpp
lab_03/implementation/commands/model/add/: add_model.cpp  add_model.hpp
lab_03/implementation/commands/model/count/: count_models.cpp  count_models.hpp
lab_03/implementation/commands/model/load/: load_model.cpp  load_model.hpp
lab_03/implementation/commands/model/move/: move_model.cpp  move_model.hpp
lab_03/implementation/commands/model/remove/: remove_model.cpp  remove_model.hpp
lab_03/implementation/commands/model/rotate/: rotate_model.cpp  rotate_model.hpp
lab_03/implementation/commands/model/scale/: scale_model.cpp  scale_model.hpp
lab_03/implementation/commands/model/transform/: transform_model.cpp  transform_model.hpp
lab_03/implementation/commands/scene/: scene_command.hpp
lab_03/implementation/commands/scene/get_main_camera/: get_main_camera.cpp  get_main_camera.hpp
lab_03/implementation/commands/scene/get_object/: get_object.cpp  get_object.hpp
lab_03/implementation/commands/scene/get_scene/: get_scene.cpp  get_scene.hpp
lab_03/implementation/commands/scene/render/: render_scene.cpp  render_scene.hpp
lab_03/implementation/drawer/: drawer.hpp
lab_03/implementation/drawer/solution/: solution_drawer_factory.cpp  solution_drawer_factory.hpp
lab_03/implementation/exceptions/: base_exception.hpp  camera_exceptions.hpp  load_exceptions.hpp  model_exceptions.hpp  ui_exceptions.hpp
lab_03/implementation/facade/: facade.cpp  facade.hpp
lab_03/implementation/load/builders/: object_builder.hpp
lab_03/implementation/load/builders/camera/: camera_builder.hpp
lab_03/implementation/load/builders/camera/file_camera_builder/: file_camera_builder.cpp  file_camera_builder.hpp
lab_03/implementation/load/builders/model/: model_builder.hpp
lab_03/implementation/load/builders/model/file_model_builder/: file_model_builder.hpp
lab_03/implementation/load/directors/: load_director.hpp
lab_03/implementation/load/directors/camera/: camera_director.cpp  camera_director.hpp
lab_03/implementation/load/directors/model/: model_director.hpp
lab_03/implementation/load/directors/model/wireframe_model/: wireframe_model_director.cpp  wireframe_model_director.hpp
lab_03/implementation/load/directors/solution/: director_solution.cpp  director_solution.hpp
lab_03/implementation/load/loaders/: file_base_loader.hpp
lab_03/implementation/load/loaders/camera/: file_camera_loader.cpp  file_camera_loader.hpp
lab_03/implementation/load/loaders/model/: file_wireframe_model_loader.cpp  file_wireframe_model_loader.hpp
lab_03/implementation/managers/: manager.hpp  manager_creator.hpp
lab_03/implementation/managers/draw/: draw_manager.cpp  draw_manager.hpp
lab_03/implementation/managers/load/: load_manager.cpp  load_manager.hpp
lab_03/implementation/managers/scene/: scene_manager.cpp  scene_manager.hpp
lab_03/implementation/managers/transform/: transform_manager.cpp  transform_manager.hpp
lab_03/implementation/objects/: object.hpp
lab_03/implementation/objects/camera/: camera.cpp  camera.hpp
lab_03/implementation/objects/composite/: composite.cpp  composite.hpp
lab_03/implementation/objects/model/: model.hpp
lab_03/implementation/objects/model/wireframe_model/: wireframe_model.cpp  wireframe_model.hpp
lab_03/implementation/scene/: scene.cpp  scene.hpp
lab_03/implementation/visitor/: visitor.hpp
lab_03/implementation/visitor/draw_visitor/: draw_visitor.cpp  draw_visitor.hpp
lab_03/lab_03/: lab_03.cpp  lab_03.h  lab_03.qrc  lab_03.sln  lab_03.ui  lab_03.vcxproj  lab_03.vcxproj.filters  main.cpp  mainwindow.ui
lab_03/lab_03qt/: builder_camera.cpp  builder_camera.h  builder_camera_base.h  builder_model.cpp  builder_model.h  builder_model_base.h  camera_source_loader_base.h  camera_source_loader_file.cpp  camera_source_loader_file.h  canvas_base.h  canvas_qt.cpp  canvas_qt.h  carcass.cpp  carcass.h  command_base.h  commands.cpp  commands.h  controller.cpp  controller.h  director_camera.cpp  director_camera.h  director_model.cpp  director_model.h  drawer_base.h  drawer_qt.cpp  drawer_qt.h  error_base.h  error_container.h  error_drawer.h  error_loader.h  error_new.h  error_scene.h  facade.cpp  facade.h  factory_abstract.h  factory_qt.h  iterator_base.h  iterator_const.h  iterator_usual.h  iterator_vector.h  (+43 more)
lab_03/lab_03qt/data/: config.cfg
lab_03/src/configuration/: loadsolution.h  registrator.h  solution.h
lab_03/src/facade/: basecommand.cpp  basecommand.h
lab_03/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_03/src/load/: baseSourceLoader.cpp  basesourceloader.cpp  camerafileloader.cpp  loadDirector.cpp  loadDirector.h  scenebuilder.cpp  scenefileloader.cpp
lab_03/src/managers/: basemanager.h  configmanager.h  drawmanager.cpp  drawmanager.h  loadmanager.h  managersolution.cpp  managersolution.h  scenemanager.h
lab_03/src/objects/: data.h  figure.h  object.h
lab_03/src/scene/: scene.h
lab_03/src/visitor/: visitor.h
lab_04(smart cabine)/: CMakeLists.txt
lab_04(smart cabine)/inc/: button.h  door.h  liftcabin.h  mainwindow.h
(+135 files in other folders)
